[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/bullet.png" type="Texture" id=1]
[ext_resource path="res://scenes/EnemyBullets.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="EnemyBullets" type="Area2D" groups=["enemy_bullet"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.776471, 0.14902, 0.14902, 1 )
position = Vector2( 5, 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 4, 5 )

[connection signal="area_entered" from="." to="." method="_on_EnemyBullets_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyBullets_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
